Fixed responsiveness for medium and large size screen.
Aarti sharma.

--- a/flextest.html
+++ b/flextest.html
@@ -4,8 +4,8 @@
 <head>
     <title>FlexBox Testing</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="gene.css" type="text/css">
-    <link rel="stylesheet" href="normalize.css">
+    <link rel="stylesheet" href="css/gene.css" type="text/css">
+    <link rel="stylesheet" href="css/normalize.css">
     
     <style>
     .header{border:1px solid #f52b63; background: #e6ae27;}
