--- a/index.html
+++ b/index.html
@@ -15,43 +15,63 @@
 
         <div class="col-m-5 col-l-5 blocks" id="fifablock">
             <a class="namebanner" href="#fifablock">FIFA MANAGER - Play with Players of LEAGUE</a>
-            <div class="backbutton"><a href="#base">&#x21E0;</a>
+
+            <div class="contentbox">
+                <div class="topbar row">
+                    <div class="col-m-6 col-l-6"></div>
+                    <div class="col-m-6 col-l-6">
+                        <a href="#fifablock"> FIFA MANAGER</a>
+                        <a href="#cryptoblock"> CRYPTOTIME</a>
+                        <a href="#crosswordblock"> CROSSWORDS</a>
+                        <a href="#decodeblock"> DECODE++</a>
+                        <a href="#designblock"> DESIGNHOUR</a>
+                        <a href="#base"> Back to events</a>
+                    </div>
+                </div>
+                <div class="wall row"><span class="col-m-12 col-l-12">FIFA MANAGER</span>
+                </div>
+                <div class="informbox row">Loreum Ipsum</div>
             </div>
+
         </div>
 
         <div class="col-m-4 col-l-4 blocks" id="cryptoblock">
             <a href="#cryptoblock" class="namebanner">CRYPTOTIME - BE SHERLOCK FOR A DAY or 2</a>
-            <div class="backbutton"><a href="#base">&#x21E0;</a>
+            <div class="contentbox">
+                <div class="topbar row">
+                    <div class="col-m-6 col-l-6"></div>
+                    <div class="col-m-6 col-l-6">
+                        <a href="#fifablock"> FIFA MANAGER</a>
+                        <a href="#cryptoblock"> CRYPTOTIME</a>
+                        <a href="#crosswordblock"> CROSSWORDS</a>
+                        <a href="#decodeblock"> DECODE++</a>
+                        <a href="#designblock"> DESIGNHOUR</a>
+                        <a href="#base"> Back to events</a>
+                    </div>
+                </div>
+                <div class="wall row"><span class="col-m-12 col-l-12">CRYPTOTIME</span>
+                </div>
+                <div class="informbox row">Loreum Ipsum</div>
             </div>
         </div>
 
         <div class="col-m-3 col-l-3 blocks" id="crosswordblock">
             <a href="#crosswordblock" class="namebanner">CROSSWORDS : SOLVE THE Loreum IPSUM</a>
-            <div class="backbutton"><a href="#base">&#x21E0;</a>
-            </div>
-        </div>
-
-    </div>
-
-    <div class="row columns">
-
-
-        <div class="col-m-2 col-l-2 blocks" id="somethingblock">
-            <a href="#somethingblock" class="namebanner">SOMETHINGBLOCK : SOLVE THE Loreum IPSUM</a>
-            <div class="backbutton"><a href="#base">&#x21E0;</a>
-            </div>
-        </div>
-
-
-        <div class="col-m-5 col-l-5 blocks" id="decodeblock">
-            <a href="#decodeblock" class="namebanner">DECODE++ : UNLEASH THE CODING NINJA</a>
-            <div class="backbutton"><a href="#base">&#x21E0;</a>
-            </div>
-        </div>
-
-        <div class="col-m-5 col-l-5 blocks" id="designblock">
-            <a href="#designblock" class="namebanner">DESIGNHOUR : MAKE THIS WORLD A BEAUTIFUL PLACE</a>
-            <div class="backbutton"><a href="#base">&#x21E0;</a>
+            <div class="contentbox">
+                <div class="topbar row">
+                    <div class="col-m-6 col-l-6"></div>
+                    <div class="col-m-6 col-l-6">
+                        <a href="#fifablock"> FIFA MANAGER</a>
+                        <a href="#cryptoblock"> CRYPTOTIME</a>
+                        <a href="#crosswordblock"> CROSSWORDS</a>
+                        <a href="#decodeblock"> DECODE++</a>
+                        <a href="#designblock"> DESIGNHOUR</a>
+                        <a href="#base"> Back to events</a>
+                    </div>
+                </div>
+                <div class="wall row"><span class="col-m-12 col-l-12">CROSSWORDS</span>
+                </div>
+                <div class="informbox row">Loreum Ipsum</div>
             </div>
         </div>
 
@@ -60,27 +80,132 @@
 
     <div class="row columns">
 
-        <div class="col-m-4 col-l-4 blocks" id="someotherblock">
-            <a href="#someotherblock" class="namebanner">SomeOTHER - LALALALLALALALA</a>
-            <div class="backbutton"><a href="#base">&#x21E0;</a>
+        <div class="col-m-5 col-l-5 blocks" id="fifablock">
+            <a class="namebanner" href="#fifablock">FIFA MANAGER - Play with Players of LEAGUE</a>
+
+            <div class="contentbox">
+                <div class="topbar row">
+                    <div class="col-m-6 col-l-6"></div>
+                    <div class="col-m-6 col-l-6">
+                        <a href="#fifablock"> FIFA MANAGER</a>
+                        <a href="#cryptoblock"> CRYPTOTIME</a>
+                        <a href="#crosswordblock"> CROSSWORDS</a>
+                        <a href="#decodeblock"> DECODE++</a>
+                        <a href="#designblock"> DESIGNHOUR</a>
+                        <a href="#base"> Back to events</a>
+                    </div>
+                </div>
+                <div class="wall row"><span class="col-m-12 col-l-12">FIFA MANAGER</span>
+                </div>
+                <div class="informbox row">Loreum Ipsum</div>
+            </div>
+
+        </div>
+
+        <div class="col-m-4 col-l-4 blocks" id="cryptoblock">
+            <a href="#cryptoblock" class="namebanner">CRYPTOTIME - BE SHERLOCK FOR A DAY or 2</a>
+            <div class="contentbox">
+                <div class="topbar row">
+                    <div class="col-m-6 col-l-6"></div>
+                    <div class="col-m-6 col-l-6">
+                        <a href="#fifablock"> FIFA MANAGER</a>
+                        <a href="#cryptoblock"> CRYPTOTIME</a>
+                        <a href="#crosswordblock"> CROSSWORDS</a>
+                        <a href="#decodeblock"> DECODE++</a>
+                        <a href="#designblock"> DESIGNHOUR</a>
+                        <a href="#base"> Back to events</a>
+                    </div>
+                </div>
+                <div class="wall row"><span class="col-m-12 col-l-12">CRYPTOTIME</span>
+                </div>
+                <div class="informbox row">Loreum Ipsum</div>
             </div>
         </div>
 
-        <div class="col-m-3 col-l-3 blocks" id="sscbsblock">
-            <a href="#sscbsblock" class="namebanner">SSCBS : Beloved College</a>
-            <div class="backbutton"><a href="#base">&#x21E0;</a>
+        <div class="col-m-3 col-l-3 blocks" id="crosswordblock">
+            <a href="#crosswordblock" class="namebanner">CROSSWORDS : SOLVE THE Loreum IPSUM</a>
+            <div class="contentbox">
+                <div class="topbar row">
+                    <div class="col-m-6 col-l-6"></div>
+                    <div class="col-m-6 col-l-6">
+                        <a href="#fifablock"> FIFA MANAGER</a>
+                        <a href="#cryptoblock"> CRYPTOTIME</a>
+                        <a href="#crosswordblock"> CROSSWORDS</a>
+                        <a href="#decodeblock"> DECODE++</a>
+                        <a href="#designblock"> DESIGNHOUR</a>
+                        <a href="#base"> Back to events</a>
+                    </div>
+                </div>
+                <div class="wall row"><span class="col-m-12 col-l-12">CROSSWORDS</span>
+                </div>
+                <div class="informbox row">Loreum Ipsum</div>
             </div>
         </div>
 
-        <div class="col-m-2 col-l-2 blocks" id="teamblock">
-            <a href="#teamblock" class="namebanner">TEAM KRONOS : ? About us</a>
-            <div class="backbutton"><a href="#base">&#x21E0;</a>
+    </div>
+
+
+    <div class="row columns">
+
+        <div class="col-m-5 col-l-5 blocks" id="fifablock">
+            <a class="namebanner" href="#fifablock">FIFA MANAGER - Play with Players of LEAGUE</a>
+
+            <div class="contentbox">
+                <div class="topbar row">
+                    <div class="col-m-6 col-l-6"></div>
+                    <div class="col-m-6 col-l-6">
+                        <a href="#fifablock"> FIFA MANAGER</a>
+                        <a href="#cryptoblock"> CRYPTOTIME</a>
+                        <a href="#crosswordblock"> CROSSWORDS</a>
+                        <a href="#decodeblock"> DECODE++</a>
+                        <a href="#designblock"> DESIGNHOUR</a>
+                        <a href="#base"> Back to events</a>
+                    </div>
+                </div>
+                <div class="wall row"><span class="col-m-12 col-l-12">FIFA MANAGER</span>
+                </div>
+                <div class="informbox row">Loreum Ipsum</div>
+            </div>
+
+        </div>
+
+        <div class="col-m-4 col-l-4 blocks" id="cryptoblock">
+            <a href="#cryptoblock" class="namebanner">CRYPTOTIME - BE SHERLOCK FOR A DAY or 2</a>
+            <div class="contentbox">
+                <div class="topbar row">
+                    <div class="col-m-6 col-l-6"></div>
+                    <div class="col-m-6 col-l-6">
+                        <a href="#fifablock"> FIFA MANAGER</a>
+                        <a href="#cryptoblock"> CRYPTOTIME</a>
+                        <a href="#crosswordblock"> CROSSWORDS</a>
+                        <a href="#decodeblock"> DECODE++</a>
+                        <a href="#designblock"> DESIGNHOUR</a>
+                        <a href="#base"> Back to events</a>
+                    </div>
+                </div>
+                <div class="wall row"><span class="col-m-12 col-l-12">CRYPTOTIME</span>
+                </div>
+                <div class="informbox row">Loreum Ipsum</div>
             </div>
         </div>
 
-        <div class="col-m-3 col-l-3 blocks" id="eventblock">
-            <a href="#eventblock" class="namebanner">SANGANAK : TECH FEST OF SSCBS</a>
-            <div class="backbutton"><a href="#base">&#x21E0;</a>
+        <div class="col-m-3 col-l-3 blocks" id="crosswordblock">
+            <a href="#crosswordblock" class="namebanner">CROSSWORDS : SOLVE THE Loreum IPSUM</a>
+            <div class="contentbox">
+                <div class="topbar row">
+                    <div class="col-m-6 col-l-6"></div>
+                    <div class="col-m-6 col-l-6">
+                        <a href="#fifablock"> FIFA MANAGER</a>
+                        <a href="#cryptoblock"> CRYPTOTIME</a>
+                        <a href="#crosswordblock"> CROSSWORDS</a>
+                        <a href="#decodeblock"> DECODE++</a>
+                        <a href="#designblock"> DESIGNHOUR</a>
+                        <a href="#base"> Back to events</a>
+                    </div>
+                </div>
+                <div class="wall row"><span class="col-m-12 col-l-12">CROSSWORDS</span>
+                </div>
+                <div class="informbox row">Loreum Ipsum</div>
             </div>
         </div>
 
