--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Prototype-Sanganak 2015</title>
+    <title>Alpha-Sanganak 2015</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/gene.css" type="text/css">
     <link rel="stylesheet" href="css/normalize.css">
@@ -13,13 +13,13 @@
 <body id="base">
     <div class="row columns">
 
-        <div class="col-m-5 col-l-5 blocks" id="fifablock">
-            <a class="namebanner" href="#fifablock">FIFA MANAGER - Play with Players of LEAGUE</a>
+        <div class="col-5 col-m-5 col-l-5 blocks" id="fifablock">
+            <a class="namebanner" href="#fifablock">FIFA MANAGER - Hit the NETS</a>
 
             <div class="contentbox">
                 <div class="topbar row">
-                    <div class="col-m-6 col-l-6"></div>
-                    <div class="col-m-6 col-l-6">
+                    <div class="col-6 col-m-6 col-l-6"></div>
+                    <div class="col-6 col-m-6 col-l-6">
                         <a href="#fifablock"> FIFA MANAGER</a>
                         <a href="#cryptoblock"> CRYPTOTIME</a>
                         <a href="#crosswordblock"> CROSSWORDS</a>
@@ -28,19 +28,19 @@
                         <a href="#base"> Back to events</a>
                     </div>
                 </div>
-                <div class="wall row"><span class="col-m-12 col-l-12">FIFA MANAGER</span>
+                <div class="wall row"><span class="col-12 col-m-12 col-l-12">FIFA MANAGER</span>
                 </div>
                 <div class="informbox row">Loreum Ipsum</div>
             </div>
 
         </div>
 
-        <div class="col-m-4 col-l-4 blocks" id="cryptoblock">
+        <div class="col-4 col-m-4 col-l-4 blocks" id="cryptoblock">
             <a href="#cryptoblock" class="namebanner">CRYPTOTIME - BE SHERLOCK FOR A DAY or 2</a>
             <div class="contentbox">
                 <div class="topbar row">
-                    <div class="col-m-6 col-l-6"></div>
-                    <div class="col-m-6 col-l-6">
+                    <div class="col-6 col-m-6 col-l-6"></div>
+                    <div class="col-6 col-m-6 col-l-6">
                         <a href="#fifablock"> FIFA MANAGER</a>
                         <a href="#cryptoblock"> CRYPTOTIME</a>
                         <a href="#crosswordblock"> CROSSWORDS</a>
@@ -55,12 +55,12 @@
             </div>
         </div>
 
-        <div class="col-m-3 col-l-3 blocks" id="crosswordblock">
+        <div class="col-3 col-m-3 col-l-3 blocks" id="crosswordblock">
             <a href="#crosswordblock" class="namebanner">CROSSWORDS : SOLVE THE Loreum IPSUM</a>
             <div class="contentbox">
                 <div class="topbar row">
-                    <div class="col-m-6 col-l-6"></div>
-                    <div class="col-m-6 col-l-6">
+                    <div class="col-6 col-m-6 col-l-6"></div>
+                    <div class="col-6 col-m-6 col-l-6">
                         <a href="#fifablock"> FIFA MANAGER</a>
                         <a href="#cryptoblock"> CRYPTOTIME</a>
                         <a href="#crosswordblock"> CROSSWORDS</a>
@@ -69,7 +69,7 @@
                         <a href="#base"> Back to events</a>
                     </div>
                 </div>
-                <div class="wall row"><span class="col-m-12 col-l-12">CROSSWORDS</span>
+                <div class="wall row"><span class="col-12 col-m-12 col-l-12">CROSSWORDS</span>
                 </div>
                 <div class="informbox row">Loreum Ipsum</div>
             </div>
@@ -80,13 +80,12 @@
 
     <div class="row columns">
 
-        <div class="col-m-5 col-l-5 blocks" id="fifablock">
-            <a class="namebanner" href="#fifablock">FIFA MANAGER - Play with Players of LEAGUE</a>
-
+        <div class="col-2 col-m-2 col-l-2 blocks" id="samplebox">
+            <a class="namebanner" href="#samplebox">sample box - sample box!</a>
             <div class="contentbox">
                 <div class="topbar row">
-                    <div class="col-m-6 col-l-6"></div>
-                    <div class="col-m-6 col-l-6">
+                    <div class="col-6 col-m-6 col-l-6"></div>
+                    <div class="col-6 col-m-6 col-l-6">
                         <a href="#fifablock"> FIFA MANAGER</a>
                         <a href="#cryptoblock"> CRYPTOTIME</a>
                         <a href="#crosswordblock"> CROSSWORDS</a>
@@ -95,19 +94,18 @@
                         <a href="#base"> Back to events</a>
                     </div>
                 </div>
-                <div class="wall row"><span class="col-m-12 col-l-12">FIFA MANAGER</span>
+                <div class="wall row"><span class="col-12 col-m-12 col-l-12">SAMplebox</span>
                 </div>
                 <div class="informbox row">Loreum Ipsum</div>
             </div>
-
         </div>
 
-        <div class="col-m-4 col-l-4 blocks" id="cryptoblock">
-            <a href="#cryptoblock" class="namebanner">CRYPTOTIME - BE SHERLOCK FOR A DAY or 2</a>
+        <div class="col-5 col-m-5 col-l-5 blocks" id="decodeblock">
+            <a href="#decodeblock" class="namebanner">DECODE++ : Enter into realms of Programming World</a>
             <div class="contentbox">
                 <div class="topbar row">
-                    <div class="col-m-6 col-l-6"></div>
-                    <div class="col-m-6 col-l-6">
+                    <div class="col-6 col-m-6 col-l-6"></div>
+                    <div class="col-6 col-m-6 col-l-6">
                         <a href="#fifablock"> FIFA MANAGER</a>
                         <a href="#cryptoblock"> CRYPTOTIME</a>
                         <a href="#crosswordblock"> CROSSWORDS</a>
@@ -116,18 +114,18 @@
                         <a href="#base"> Back to events</a>
                     </div>
                 </div>
-                <div class="wall row"><span class="col-m-12 col-l-12">CRYPTOTIME</span>
+                <div class="wall row"><span class="col-12 col-m-12 col-l-12">DECODE++</span>
                 </div>
                 <div class="informbox row">Loreum Ipsum</div>
             </div>
         </div>
 
-        <div class="col-m-3 col-l-3 blocks" id="crosswordblock">
-            <a href="#crosswordblock" class="namebanner">CROSSWORDS : SOLVE THE Loreum IPSUM</a>
+        <div class="col-5 col-m-5 col-l-5 blocks" id="designblock">
+            <a href="#designblock" class="namebanner">DESIGNHOUR - Make this world a better place</a>
             <div class="contentbox">
                 <div class="topbar row">
-                    <div class="col-m-6 col-l-6"></div>
-                    <div class="col-m-6 col-l-6">
+                    <div class="col-6 col-m-6 col-l-6"></div>
+                    <div class="col-6 col-m-6 col-l-6">
                         <a href="#fifablock"> FIFA MANAGER</a>
                         <a href="#cryptoblock"> CRYPTOTIME</a>
                         <a href="#crosswordblock"> CROSSWORDS</a>
@@ -136,24 +134,25 @@
                         <a href="#base"> Back to events</a>
                     </div>
                 </div>
-                <div class="wall row"><span class="col-m-12 col-l-12">CROSSWORDS</span>
+                <div class="wall row"><span class="col-12 col-m-12 col-l-12">DESIGNHOUR</span>
                 </div>
                 <div class="informbox row">Loreum Ipsum</div>
             </div>
         </div>
+
 
     </div>
 
 
     <div class="row columns">
 
-        <div class="col-m-5 col-l-5 blocks" id="fifablock">
-            <a class="namebanner" href="#fifablock">FIFA MANAGER - Play with Players of LEAGUE</a>
+        <div class="col-5 col-m-5 col-l-5 blocks" id="sponsorblock">
+            <a class="namebanner" href="#sponsorblock">PEOPLE WHO POWER US</a>
 
             <div class="contentbox">
                 <div class="topbar row">
-                    <div class="col-m-6 col-l-6"></div>
-                    <div class="col-m-6 col-l-6">
+                    <div class="col-6 col-m-6 col-l-6"></div>
+                    <div class="col-6 col-m-6 col-l-6">
                         <a href="#fifablock"> FIFA MANAGER</a>
                         <a href="#cryptoblock"> CRYPTOTIME</a>
                         <a href="#crosswordblock"> CROSSWORDS</a>
@@ -162,19 +161,19 @@
                         <a href="#base"> Back to events</a>
                     </div>
                 </div>
-                <div class="wall row"><span class="col-m-12 col-l-12">FIFA MANAGER</span>
+                <div class="wall row"><span class="col-12 col-m-12 col-l-12">Sponsors</span>
                 </div>
                 <div class="informbox row">Loreum Ipsum</div>
             </div>
 
         </div>
 
-        <div class="col-m-4 col-l-4 blocks" id="cryptoblock">
-            <a href="#cryptoblock" class="namebanner">CRYPTOTIME - BE SHERLOCK FOR A DAY or 2</a>
+        <div class="col-4 col-m-4 col-l-4 blocks" id="eventblock">
+            <a href="#eventblock" class="namebanner">SANGANAK - TEAM KRONOS</a>
             <div class="contentbox">
                 <div class="topbar row">
-                    <div class="col-m-6 col-l-6"></div>
-                    <div class="col-m-6 col-l-6">
+                    <div class="col-6 col-m-6 col-l-6"></div>
+                    <div class="col-6 col-m-6 col-l-6">
                         <a href="#fifablock"> FIFA MANAGER</a>
                         <a href="#cryptoblock"> CRYPTOTIME</a>
                         <a href="#crosswordblock"> CROSSWORDS</a>
@@ -183,30 +182,14 @@
                         <a href="#base"> Back to events</a>
                     </div>
                 </div>
-                <div class="wall row"><span class="col-m-12 col-l-12">CRYPTOTIME</span>
+                <div class="wall row"><span class="col-12 col-m-12 col-l-12">TEAM KRONOS</span>
                 </div>
                 <div class="informbox row">Loreum Ipsum</div>
             </div>
         </div>
 
-        <div class="col-m-3 col-l-3 blocks" id="crosswordblock">
-            <a href="#crosswordblock" class="namebanner">CROSSWORDS : SOLVE THE Loreum IPSUM</a>
-            <div class="contentbox">
-                <div class="topbar row">
-                    <div class="col-m-6 col-l-6"></div>
-                    <div class="col-m-6 col-l-6">
-                        <a href="#fifablock"> FIFA MANAGER</a>
-                        <a href="#cryptoblock"> CRYPTOTIME</a>
-                        <a href="#crosswordblock"> CROSSWORDS</a>
-                        <a href="#decodeblock"> DECODE++</a>
-                        <a href="#designblock"> DESIGNHOUR</a>
-                        <a href="#base"> Back to events</a>
-                    </div>
-                </div>
-                <div class="wall row"><span class="col-m-12 col-l-12">CROSSWORDS</span>
-                </div>
-                <div class="informbox row">Loreum Ipsum</div>
-            </div>
+        <div class="col-m-3 col-l-3 blocks" id="sscbsblock">
+            <a href="://www.sscbsdu.ac.in" class="namebanner">SSCBS : OUR BELOVED COLLEGE</a>
         </div>
 
     </div>
