added information box with loreum ipsum

--- a/index.html
+++ b/index.html
@@ -30,7 +30,13 @@
                 </div>
                 <div class="wall row"><span class="col-12 col-m-12 col-l-12">FIFA MANAGER</span>
                 </div>
-                <div class="informbox row">Loreum Ipsum</div>
+                <div class="informbox row">
+                    <div class="col-4 col-m-4 col-l-4 insideblock">
+                        <div class="boxinside"></div>
+                    </div>
+                    <div class="col-4 col-m-4 col-l-4 insideblock">Now that we know who you are, I know who I am. I'm not a mistake!<br><br> It all makes sense! In a comic, you know how you can tell who the arch-villain's going to be? He's the exact opposite of the hero. And most times they're friends, like you and me!<br><br> I should've known way back when... You know why, David? Because of the kids. They called me Mr Glass.</div>
+                    <div class="col-4 col-m-4 col-l-4 insideblock">We might put a link / button / suscribe or something here.</div>
+                </div>
             </div>
 
         </div>
@@ -51,7 +57,13 @@
                 </div>
                 <div class="wall row"><span class="col-m-12 col-l-12">CRYPTOTIME</span>
                 </div>
-                <div class="informbox row">Loreum Ipsum</div>
+                <div class="informbox row">
+                    <div class="col-4 col-m-4 col-l-4 insideblock">
+                        <div class="boxinside"></div>
+                    </div>
+                    <div class="col-4 col-m-4 col-l-4 insideblock">Now that we know who you are, I know who I am. I'm not a mistake!<br><br> It all makes sense! In a comic, you know how you can tell who the arch-villain's going to be? He's the exact opposite of the hero. And most times they're friends, like you and me!<br><br> I should've known way back when... You know why, David? Because of the kids. They called me Mr Glass.</div>
+                    <div class="col-4 col-m-4 col-l-4 insideblock">We might put a link / button / suscribe or something here.</div>
+                </div>
             </div>
         </div>
 
@@ -71,7 +83,13 @@
                 </div>
                 <div class="wall row"><span class="col-12 col-m-12 col-l-12">CROSSWORDS</span>
                 </div>
-                <div class="informbox row">Loreum Ipsum</div>
+                <div class="informbox row">
+                    <div class="col-4 col-m-4 col-l-4 insideblock">
+                        <div class="boxinside"></div>
+                    </div>
+                    <div class="col-4 col-m-4 col-l-4 insideblock">Now that we know who you are, I know who I am. I'm not a mistake!<br><br> It all makes sense! In a comic, you know how you can tell who the arch-villain's going to be? He's the exact opposite of the hero. And most times they're friends, like you and me!<br><br> I should've known way back when... You know why, David? Because of the kids. They called me Mr Glass.</div>
+                    <div class="col-4 col-m-4 col-l-4 insideblock">We might put a link / button / suscribe or something here.</div>
+                </div>
             </div>
         </div>
 
@@ -96,7 +114,13 @@
                 </div>
                 <div class="wall row"><span class="col-12 col-m-12 col-l-12">SAMplebox</span>
                 </div>
-                <div class="informbox row">Loreum Ipsum</div>
+                <div class="informbox row">
+                    <div class="col-4 col-m-4 col-l-4 insideblock">
+                        <div class="boxinside"></div>
+                    </div>
+                    <div class="col-4 col-m-4 col-l-4 insideblock">Now that we know who you are, I know who I am. I'm not a mistake!<br><br> It all makes sense! In a comic, you know how you can tell who the arch-villain's going to be? He's the exact opposite of the hero. And most times they're friends, like you and me!<br><br> I should've known way back when... You know why, David? Because of the kids. They called me Mr Glass.</div>
+                    <div class="col-4 col-m-4 col-l-4 insideblock">We might put a link / button / suscribe or something here.</div>
+                </div>
             </div>
         </div>
 
@@ -116,7 +140,13 @@
                 </div>
                 <div class="wall row"><span class="col-12 col-m-12 col-l-12">DECODE++</span>
                 </div>
-                <div class="informbox row">Loreum Ipsum</div>
+                <div class="informbox row">
+                    <div class="col-4 col-m-4 col-l-4 insideblock">
+                        <div class="boxinside"></div>
+                    </div>
+                    <div class="col-4 col-m-4 col-l-4 insideblock">Now that we know who you are, I know who I am. I'm not a mistake!<br><br> It all makes sense! In a comic, you know how you can tell who the arch-villain's going to be? He's the exact opposite of the hero. And most times they're friends, like you and me!<br><br> I should've known way back when... You know why, David? Because of the kids. They called me Mr Glass.</div>
+                    <div class="col-4 col-m-4 col-l-4 insideblock">We might put a link / button / suscribe or something here.</div>
+                </div>
             </div>
         </div>
 
@@ -136,7 +166,13 @@
                 </div>
                 <div class="wall row"><span class="col-12 col-m-12 col-l-12">DESIGNHOUR</span>
                 </div>
-                <div class="informbox row">Loreum Ipsum</div>
+                <div class="informbox row">
+                    <div class="col-4 col-m-4 col-l-4 insideblock">
+                        <div class="boxinside"></div>
+                    </div>
+                    <div class="col-4 col-m-4 col-l-4 insideblock">Now that we know who you are, I know who I am. I'm not a mistake!<br><br> It all makes sense! In a comic, you know how you can tell who the arch-villain's going to be? He's the exact opposite of the hero. And most times they're friends, like you and me!<br><br> I should've known way back when... You know why, David? Because of the kids. They called me Mr Glass.</div>
+                    <div class="col-4 col-m-4 col-l-4 insideblock">We might put a link / button / suscribe or something here.</div>
+                </div>
             </div>
         </div>
 
@@ -163,7 +199,13 @@
                 </div>
                 <div class="wall row"><span class="col-12 col-m-12 col-l-12">Sponsors</span>
                 </div>
-                <div class="informbox row">Loreum Ipsum</div>
+                <div class="informbox row">
+                    <div class="col-4 col-m-4 col-l-4 insideblock">
+                        <div class="boxinside"></div>
+                    </div>
+                    <div class="col-4 col-m-4 col-l-4 insideblock">Now that we know who you are, I know who I am. I'm not a mistake!<br><br> It all makes sense! In a comic, you know how you can tell who the arch-villain's going to be? He's the exact opposite of the hero. And most times they're friends, like you and me!<br><br> I should've known way back when... You know why, David? Because of the kids. They called me Mr Glass.</div>
+                    <div class="col-4 col-m-4 col-l-4 insideblock">We might put a link / button / suscribe or something here.</div>
+                </div>
             </div>
 
         </div>
