--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
         </div>
 
         <div class="col-m-3 col-l-3 blocks" id="sscbsblock">
-            <a href="://www.sscbsdu.ac.in" class="namebanner">SSCBS : OUR BELOVED COLLEGE</a>
+            <a href="//www.sscbsdu.ac.in" class="namebanner">SSCBS : OUR BELOVED COLLEGE</a>
         </div>
 
     </div>
