--- a/index.html
+++ b/index.html
@@ -5,15 +5,16 @@
     <title>Alpha-Sanganak 2015</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/gene.css" type="text/css">
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/main.css">
-    <link href='https://fonts.googleapis.com/css?family=Lato:400,700,300,300italic,400italic,700italic,900' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="css/normalize.css" type="text/css">
+    <link rel="stylesheet" href="css/main.css" type="text/css">
+    <link href='https://fonts.googleapis.com/css?family=Lato:400,700,300,300italic,400italic,700italic' rel='stylesheet' type='text/css'>
 </head>
 
 <body id="base">
     <div class="row columns">
 
         <div class="col-5 col-m-5 col-l-5 blocks" id="crosswordblock">
+            <a href="#crosswordblock" class="clickevent"></a>
             <a href="#crosswordblock" class="namebanner">CROSSWORDS : SOLVE THE Loreum IPSUM</a>
             <div class="contentbox">
                 <div class="topbar row">
@@ -40,8 +41,8 @@
         </div>
 
         <div class="col-3 col-m-3 col-l-3 blocks" id="fifablock">
+            <a href="#fifablock" class="clickevent"></a>
             <a class="namebanner" href="#fifablock">FIFA MANAGER - Hit the NETS</a>
-
             <div class="contentbox">
                 <div class="topbar row">
                     <div class="col-6 col-m-6 col-l-6"></div>
@@ -68,6 +69,7 @@
         </div>
 
         <div class="col-4 col-m-4 col-l-4 blocks" id="cryptoblock">
+            <a href="#cryptoblock" class="clickevent"></a>
             <a href="#cryptoblock" class="namebanner">CRYPTOTIME - BE SHERLOCK FOR A DAY or 2</a>
             <div class="contentbox">
                 <div class="topbar row">
@@ -99,6 +101,7 @@
     <div class="row columns">
 
         <div class="col-2 col-m-2 col-l-2 blocks" id="samplebox">
+            <a href="#samplebox" class="clickevent"></a>
             <a class="namebanner" href="#samplebox">sample box - sample box!</a>
             <div class="contentbox">
                 <div class="topbar row">
@@ -126,6 +129,7 @@
 
 
         <div class="col-5 col-m-5 col-l-5 blocks" id="designblock">
+            <a href="#designblock" class="clickevent"></a>
             <a href="#designblock" class="namebanner">DESIGNHOUR - Make this world a better place</a>
             <div class="contentbox">
                 <div class="topbar row">
@@ -152,6 +156,7 @@
         </div>
 
         <div class="col-5 col-m-5 col-l-5 blocks" id="decodeblock">
+            <a href="#decodeblock" class="clickevent"></a>
             <a href="#decodeblock" class="namebanner">DECODE++ : Enter into realms of Programming World</a>
             <div class="contentbox">
                 <div class="topbar row">
@@ -184,8 +189,8 @@
     <div class="row columns">
 
         <div class="col-5 col-m-5 col-l-5 blocks" id="sponsorblock">
+            <a href="#sponsorblock" class="clickevent"></a>
             <a class="namebanner" href="#sponsorblock">PEOPLE WHO POWER US</a>
-
             <div class="contentbox">
                 <div class="topbar row">
                     <div class="col-6 col-m-6 col-l-6"></div>
@@ -212,6 +217,7 @@
         </div>
 
         <div class="col-4 col-m-4 col-l-4 blocks" id="eventblock">
+            <a href="#eventblock" class="clickevent"></a>
             <a href="#eventblock" class="namebanner">SANGANAK - TEAM KRONOS</a>
             <div class="contentbox">
                 <div class="topbar row">
@@ -232,6 +238,7 @@
         </div>
 
         <div class="col-m-3 col-l-3 blocks" id="sscbsblock">
+            <a href="//www.sscbsdu.ac.in" class="clickevent"></a>
             <a href="//www.sscbsdu.ac.in" class="namebanner">SSCBS : OUR BELOVED COLLEGE</a>
         </div>
 
