Added countdown timer

--- a/index.html
+++ b/index.html
@@ -8,9 +8,13 @@
     <link rel="stylesheet" href="css/normalize.css" type="text/css">
     <link rel="stylesheet" href="css/main.css" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Lato:400,700,300,300italic,400italic,700italic' rel='stylesheet' type='text/css'>
+    <script src="js/countdown.js"></script>
 </head>
 
 <body id="base">
+
+
+
     <div class="row columns">
 
         <div class="col-5 col-m-5 col-l-5 blocks" id="crosswordblock">
@@ -34,7 +38,11 @@
                     <div class="col-4 col-m-4 col-l-4 insideblock">
                         <div class="boxinside"></div>
                     </div>
-                    <div class="col-4 col-m-4 col-l-4 insideblock">Now that we know who you are, I know who I am. I'm not a mistake!<br><br> It all makes sense! In a comic, you know how you can tell who the arch-villain's going to be? He's the exact opposite of the hero. And most times they're friends, like you and me!<br><br> I should've known way back when... You know why, David? Because of the kids. They called me Mr Glass.</div>
+                    <div class="col-4 col-m-4 col-l-4 insideblock">Now that we know who you are, I know who I am. I'm not a mistake!
+                        <br>
+                        <br> It all makes sense! In a comic, you know how you can tell who the arch-villain's going to be? He's the exact opposite of the hero. And most times they're friends, like you and me!
+                        <br>
+                        <br> I should've known way back when... You know why, David? Because of the kids. They called me Mr Glass.</div>
                     <div class="col-4 col-m-4 col-l-4 insideblock">We might put a link / button / suscribe or something here.</div>
                 </div>
             </div>
@@ -61,7 +69,11 @@
                     <div class="col-4 col-m-4 col-l-4 insideblock">
                         <div class="boxinside"></div>
                     </div>
-                    <div class="col-4 col-m-4 col-l-4 insideblock">Now that we know who you are, I know who I am. I'm not a mistake!<br><br> It all makes sense! In a comic, you know how you can tell who the arch-villain's going to be? He's the exact opposite of the hero. And most times they're friends, like you and me!<br><br> I should've known way back when... You know why, David? Because of the kids. They called me Mr Glass.</div>
+                    <div class="col-4 col-m-4 col-l-4 insideblock">Now that we know who you are, I know who I am. I'm not a mistake!
+                        <br>
+                        <br> It all makes sense! In a comic, you know how you can tell who the arch-villain's going to be? He's the exact opposite of the hero. And most times they're friends, like you and me!
+                        <br>
+                        <br> I should've known way back when... You know why, David? Because of the kids. They called me Mr Glass.</div>
                     <div class="col-4 col-m-4 col-l-4 insideblock">We might put a link / button / suscribe or something here.</div>
                 </div>
             </div>
@@ -89,7 +101,11 @@
                     <div class="col-4 col-m-4 col-l-4 insideblock">
                         <div class="boxinside"></div>
                     </div>
-                    <div class="col-4 col-m-4 col-l-4 insideblock">Now that we know who you are, I know who I am. I'm not a mistake!<br><br> It all makes sense! In a comic, you know how you can tell who the arch-villain's going to be? He's the exact opposite of the hero. And most times they're friends, like you and me!<br><br> I should've known way back when... You know why, David? Because of the kids. They called me Mr Glass.</div>
+                    <div class="col-4 col-m-4 col-l-4 insideblock">Now that we know who you are, I know who I am. I'm not a mistake!
+                        <br>
+                        <br> It all makes sense! In a comic, you know how you can tell who the arch-villain's going to be? He's the exact opposite of the hero. And most times they're friends, like you and me!
+                        <br>
+                        <br> I should've known way back when... You know why, David? Because of the kids. They called me Mr Glass.</div>
                     <div class="col-4 col-m-4 col-l-4 insideblock">We might put a link / button / suscribe or something here.</div>
                 </div>
             </div>
@@ -121,7 +137,11 @@
                     <div class="col-4 col-m-4 col-l-4 insideblock">
                         <div class="boxinside"></div>
                     </div>
-                    <div class="col-4 col-m-4 col-l-4 insideblock">Now that we know who you are, I know who I am. I'm not a mistake!<br><br> It all makes sense! In a comic, you know how you can tell who the arch-villain's going to be? He's the exact opposite of the hero. And most times they're friends, like you and me!<br><br> I should've known way back when... You know why, David? Because of the kids. They called me Mr Glass.</div>
+                    <div class="col-4 col-m-4 col-l-4 insideblock">Now that we know who you are, I know who I am. I'm not a mistake!
+                        <br>
+                        <br> It all makes sense! In a comic, you know how you can tell who the arch-villain's going to be? He's the exact opposite of the hero. And most times they're friends, like you and me!
+                        <br>
+                        <br> I should've known way back when... You know why, David? Because of the kids. They called me Mr Glass.</div>
                     <div class="col-4 col-m-4 col-l-4 insideblock">We might put a link / button / suscribe or something here.</div>
                 </div>
             </div>
@@ -149,7 +169,11 @@
                     <div class="col-4 col-m-4 col-l-4 insideblock">
                         <div class="boxinside"></div>
                     </div>
-                    <div class="col-4 col-m-4 col-l-4 insideblock">Now that we know who you are, I know who I am. I'm not a mistake!<br><br> It all makes sense! In a comic, you know how you can tell who the arch-villain's going to be? He's the exact opposite of the hero. And most times they're friends, like you and me!<br><br> I should've known way back when... You know why, David? Because of the kids. They called me Mr Glass.</div>
+                    <div class="col-4 col-m-4 col-l-4 insideblock">Now that we know who you are, I know who I am. I'm not a mistake!
+                        <br>
+                        <br> It all makes sense! In a comic, you know how you can tell who the arch-villain's going to be? He's the exact opposite of the hero. And most times they're friends, like you and me!
+                        <br>
+                        <br> I should've known way back when... You know why, David? Because of the kids. They called me Mr Glass.</div>
                     <div class="col-4 col-m-4 col-l-4 insideblock">We might put a link / button / suscribe or something here.</div>
                 </div>
             </div>
@@ -176,7 +200,11 @@
                     <div class="col-4 col-m-4 col-l-4 insideblock">
                         <div class="boxinside"></div>
                     </div>
-                    <div class="col-4 col-m-4 col-l-4 insideblock">Now that we know who you are, I know who I am. I'm not a mistake!<br><br> It all makes sense! In a comic, you know how you can tell who the arch-villain's going to be? He's the exact opposite of the hero. And most times they're friends, like you and me!<br><br> I should've known way back when... You know why, David? Because of the kids. They called me Mr Glass.</div>
+                    <div class="col-4 col-m-4 col-l-4 insideblock">Now that we know who you are, I know who I am. I'm not a mistake!
+                        <br>
+                        <br> It all makes sense! In a comic, you know how you can tell who the arch-villain's going to be? He's the exact opposite of the hero. And most times they're friends, like you and me!
+                        <br>
+                        <br> I should've known way back when... You know why, David? Because of the kids. They called me Mr Glass.</div>
                     <div class="col-4 col-m-4 col-l-4 insideblock">We might put a link / button / suscribe or something here.</div>
                 </div>
             </div>
@@ -209,7 +237,11 @@
                     <div class="col-4 col-m-4 col-l-4 insideblock">
                         <div class="boxinside"></div>
                     </div>
-                    <div class="col-4 col-m-4 col-l-4 insideblock">Now that we know who you are, I know who I am. I'm not a mistake!<br><br> It all makes sense! In a comic, you know how you can tell who the arch-villain's going to be? He's the exact opposite of the hero. And most times they're friends, like you and me!<br><br> I should've known way back when... You know why, David? Because of the kids. They called me Mr Glass.</div>
+                    <div class="col-4 col-m-4 col-l-4 insideblock">Now that we know who you are, I know who I am. I'm not a mistake!
+                        <br>
+                        <br> It all makes sense! In a comic, you know how you can tell who the arch-villain's going to be? He's the exact opposite of the hero. And most times they're friends, like you and me!
+                        <br>
+                        <br> I should've known way back when... You know why, David? Because of the kids. They called me Mr Glass.</div>
                     <div class="col-4 col-m-4 col-l-4 insideblock">We might put a link / button / suscribe or something here.</div>
                 </div>
             </div>
@@ -243,6 +275,9 @@
         </div>
 
     </div>
+
+    <div id="watermark"></div>
+    <div id="countdown"></div>
 
 </body>
 
