loader wasn't showing up , fixed!

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </style>
     <script type="text/javascript">
         window.onload = function (e) {
-
+            document.getElementById("loader").style.opacity = "0";
             document.getElementById("watermark").style.opacity = "1";
             document.getElementById("countdown").style.opacity = "1";
             var myElements = document.querySelectorAll(".columns");
