added animate boxes

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             for (var i = 0; i < myElements.length; i++) {
                 myElements[i].style.opacity = 1;
             }
-
+            animateAllBlocks();
         };
     </script>
 
